fix(news)
fixed news displaying

fixed bug causing server crush if there is no news in database

fixed image displaying bug, when no images have been attached to news_item.

fixed bug when image and text overlapped

--- a/css/Main.css
+++ b/css/Main.css
@@ -12,6 +12,7 @@
 .news_image {
 	width: 30%;
 	border-radius: 10px;
+	margin-bottom: 5px;
 }
 
 
